#Fixes 11 Cada perfil tem o seu inimigo. E imagem de fundo já mudava consoante a sala. Alterado imagens dos perfis para mostrar a letra do perfil e perfis alterados para estarem mais de acordo com o personagem. O Nerd agora é o que tem menos força, o Gordo o que tem mais vida. No combate agora mostra a energia que perdemos ou que o inimigo perde.

--- a/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
@@ -14,15 +14,15 @@
         <div class="form-group">
                    <img src="~/images/Nerd-Char.png" alt="HTML5 Icon" class="charpick">
                 <label class="ArrangeChars">
-                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="B" checked>Nerd
+                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="W" checked>Nerd
                 </label>
                     <img src="~/images/Fat-Char.png" alt="HTML5 Icon" class="charpick">
                 <label class="ArrangeChars">
-                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="S">Gordo
+                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="B">Gordo
                 </label>
                     <img src="~/images/Old-Char.png" alt="HTML5 Icon" class="charpick">
                 <label class="ArrangeChars">
-                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="W">velha louca
+                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="S">velha louca
                 </label>
             </div>
                            
