--- a/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
@@ -94,18 +94,18 @@
             @if (Model.PontosVida <= 0 || Model.ResultadoAccao == Result.GameHasEnded || Model.Desistiu == true)
             {
                 <form asp-action="DadosJogo" method="post">
-            <div class="text-center mensagemSaida">
-                @Model.MensagemAccao
-               <button class="BotaoSair" type="submit" name="gameid" value="@Model.GameID"><img src="~/images/btns/btn-sair.png" alt="Sair" z-index="3"></button> 
-            </div>
-                    </form>
+                    <div class="text-center mensagemSaida">
+                        @Model.MensagemAccao
+                        <button class="BotaoSair" type="submit" name="gameid" value="@Model.GameID"><img src="~/images/btns/btn-sair.png" alt="Sair" z-index="3"></button>
+                    </div>
+                </form>
             }
             else if (Model.ResultadoAccao == Result.SuccessVictory)
             {
                 <form asp-action="DadosJogo" method="post">
                     <div class="text-center mensagemSaida">
                         @Model.MensagemAccao
-                        <button  class="BotaoSair" type="submit" name="gameid" value="@Model.GameID"><img src="~/images/btns/btn-sair.png" alt="Sair"></button>
+                        <button class="BotaoSair" type="submit" name="gameid" value="@Model.GameID"><img src="~/images/btns/btn-sair.png" alt="Sair"></button>
                     </div>
                     <img src="~/images/Contextual/victory.png" />
                 </form>
@@ -138,62 +138,69 @@
                         <div>
                             <p class="MensagemAccaoMonstro">@Model.MensagemAccaoMonstro</p>
                         </div>
-
-
                     </div>
 
-                    
+
                     @if (Model.EncontradoOuro == true)
                     {
                         <div class="text-right inline-block">
                             <img src="~/images/Icons/icon-ouro.png" class="iconsGold" />
                         </div>
                     }
+                    @if (Model.Monstro == true)
+                    { 
+                    <div>
+                    <p class="danoNoMonstro">@Model.MensagemDano</p>
                     </div>
-                    @if (Model.EncontradoGato == true)
+                    }
+                </div>
+                @if (Model.EncontradoGato == true)
+                {
+                    <audio autoplay>
+                        <source src="~/sound/cat audio.mp3">
+                    </audio>
+                    <div class="imagemgatopreto">
+                        <img src="~/images/Icons/icon-gatopreto.png" />
+                    </div>
+                }
+
+
+
+                @if (Model.Monstro == true)
+                {
+                    if (Model.UltimaAccao != PlayerAction.Attack && Model.UltimaAccao != PlayerAction.DrinkPotion)
                     {
                         <audio autoplay>
-                            <source src="~/sound/cat audio.mp3">
+                            <source src="~/sound/Doh_sound.mp3">
                         </audio>
-                        <div class="imagemgatopreto">
-                            <img src="~/images/Icons/icon-gatopreto.png" />
+                    }
+
+                    <!--Imagem do Monstro-->
+                    @if (Model.MensagemDano != "" && Model.MensagemDano != "MISS")
+                    {
+                        <div>
+                            <img src="~/images/Inimigos/monster-@(Model.PerfilTipo)-bruised.png" class="monstro" />
+                         
                         </div>
                     }
-
-
-
-                    @if (Model.Monstro == true)
+                    else
                     {
-                        if (Model.UltimaAccao != PlayerAction.Attack && Model.UltimaAccao != PlayerAction.DrinkPotion)
-                        {
-                            <audio autoplay>
-                                <source src="~/sound/Doh_sound.mp3">
-                            </audio>
-                        }
-
-                        <!--Imagem do Monstro-->
-                        @if (Model.MensagemDano != "" && Model.MensagemDano != "MISS")
-                        {
-                            <div>
-
-                                <img src="~/images/Inimigos/SideShowBob-bruised.png" class="monstro" />
-                            </div>
-                        }
-                        else
-                        {
-                            <div>
-
-                                <img src="~/images/Inimigos/SideShowBob.png" class="monstro" />
-                            </div>
-                        }
+                        <div>
+                            <img src="~/images/Inimigos/monster-@(Model.PerfilTipo).png" class="monstro" />
+                        </div>
                     }
-                    }
-                    @if (Model.LeveiDano == true)
-                    {
-                        <div class="puttop text-right"><img src="~/images/Contextual/blood.png" class="imagemblood" /></div>
-                    }
+                }
+            }
+            @if (Model.LeveiDano == true)
+            {
+                        <div class="puttop text-right">
+                            <img src="~/images/Contextual/blood.png" class="imagemblood" />
+                            <p class="danoNoJogador">@Model.MensagemVidaNeg</p>
+                        </div>
+                
+            }
 
-                </div>
+        </div>
         <div class="col-sm-3 text-center">
             <form action="AccaoJogo" method="post">
                 @if (Model.Monstro == false)
