--- a/SetepassosPRJ/Views/Home/HiScores.cshtml
+++ b/SetepassosPRJ/Views/Home/HiScores.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Jogo>
+﻿@model List<HiScores>
 @{
     ViewData["Title"] = "HiScores";
 }
@@ -27,22 +27,22 @@ else
                 </tr>
             </thead>
             <tbody>
-                @foreach (Jogo jogo in Model)
+                @foreach (HiScores jogo in Model)
                 {
                     <tr>
                         <td>@jogo.Posicao</td>
                         <td>@jogo.Nome</td>
                         <td>@jogo.MoedasOuroTotal</td>
                         <td>
-                            @if (jogo.ResultadoAccao == Result.SuccessVictory)
+                            @if (jogo.ResultadoJogo == ResultadoJogo.Vitoria)
                             {
                                 @:Vitoria
                             }
-                            else if (jogo.ResultadoAccao == Result.GameHasEnded && jogo.PontosVida <= 0 || jogo.ResultadoAccao == Result.Success && jogo.PontosVida <= 0)
+                            else if (jogo.ResultadoJogo == ResultadoJogo.Derrota)
                             {
                                 @:Derrota
                             }
-                           @if (jogo.Desistiu == true)
+                           @if (jogo.ResultadoJogo == ResultadoJogo.Desistiu)
                            {
                                 @:Desistiu
                             }
