--- a/SetepassosPRJ/Views/Home/Index.cshtml
+++ b/SetepassosPRJ/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Jogo>
+﻿@model List<HiScores>
 @{ Layout = "_Layout";
     ViewData["Title"] = "Home";
 }
@@ -31,7 +31,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (Jogo jogo in Model)
+                        @foreach (HiScores jogo in Model)
                         {
                             <tr>
                                 <td>@jogo.Posicao</td>
