--- a/SetepassosPRJ/Views/Jogo/CriarJogoAutonomo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/CriarJogoAutonomo.cshtml
@@ -1,4 +1,4 @@
-﻿@model SetepassosPRJ.Models.JogoAutonomo
+﻿@model SetepassosPRJ.Models.Jogo
 @{
     ViewData["Title"] = "Modo Autonomo";
 }
@@ -6,7 +6,7 @@
 <h1> Modo de Jogo: Autónomo</h1>
 <br />
 
-<form asp-action="CriarJogoAutonomo" method="post">
+<form asp-action="CriarJogo" method="post">
     <div class="form-group text-center">
         <img src="~/images/Old-Char.png" alt="HTML5 Icon" class="charpick">
         <label class="ArrangeChars">
@@ -27,6 +27,8 @@
         </div>
     </div>
     <div class="text-center">
+        <input name="PerfilTipo" value="S" type="hidden" />
+        <input name="Autonomo" value="true" type="hidden" />
         <input type="image" value="CriarJogoAutonomo" src="~/images/btns/btn-jogar.png" class="BotaoJogar" />
     </div>
     <div class="text-right">
