--- a/SetepassosPRJ/Views/Jogo/DadosJogo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/DadosJogo.cshtml
@@ -39,14 +39,14 @@
 
         <div class="col-sm-6 text-center">
             <h2>Bónus</h2>
-            <p class="MensagemBonus">Ganhar o Jogo: @Model.BonusVitoria Moedas</p>
             <p class="MensagemBonus"><img src="~/images/Icons/icon-key.png" class="iconsItemsBonus" /> @Model.BonusChave Moedas</p>
             <p class="MensagemBonus"><img src="~/images/Icons/icon-enemy.png" class="iconsItemsBonus" /> @Model.BonusInimigo Moedas</p>
             <p class="MensagemBonus"><img src="~/images/Icons/icon-bonus-surpresa.png" class="iconsItemsBonus" /> @Model.BonusItem Moedas</p>
             <p class="MensagemBonus"><img src="~/images/Icons/icon-pocaoVida.png" class="iconsItemsBonus" /> @Model.BonusPocao Moedas</p>
+            <p class="MensagemBonus">Ganhar o Jogo: @Model.BonusVitoria Moedas</p>
             <p class="MensagemBonus">Ganhar sem Recuar: @Model.BonusRecuar Moedas </p>
             <p class="MensagemBonus">Ganhar sem Lutar: @Model.BonusLutar Moedas</p>
-            <p class="MensagemBonus">Ganhar com menos de 0.5 pontos de vida: @Model.BonusVida Moedas</p>
+            <p class="MensagemBonus">Ganhar com vida inferior a 0.5: @Model.BonusVida Moedas</p>
             <br />
             <p class="MensagemAccaoMonstro">Bonus Total: @Model.Bonus</p>
         </div>
