Mudado código para que o modo autonomo jogue sozinho respeitando o número de rondas.

--- a/SetepassosPRJ/Views/Jogo/CriarJogoAutonomo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/CriarJogoAutonomo.cshtml
@@ -10,13 +10,13 @@
     <div class="form-group text-center">
         <img src="~/images/Old-Char.png" alt="HTML5 Icon" class="charpick">
         <label class="ArrangeChars">
-            <input class="form-control" type="radio" asp-for="Nome" value="teste3" checked>Auto 3
+            <input class="form-control" type="radio" asp-for="Nome" value="Teste3" checked>Auto 3
         </label>
         <label class="ArrangeChars">
-            <input class="form-control" type="radio" asp-for="Nome" value="teste7" checked>Auto 7
+            <input class="form-control" type="radio" asp-for="Nome" value="Teste7" checked>Auto 7
         </label>
         <label class="ArrangeChars">
-            <input class="form-control" type="radio" asp-for="Nome" value="teste0" checked>Auto 0
+            <input class="form-control" type="radio" asp-for="Nome" value="Teste0" checked>Auto 0
         </label>
 
 
