Modo Autonomo, API Scores, falta melhorar a estrategia

--- a/SetepassosPRJ/Views/Jogo/DadosJogo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/DadosJogo.cshtml
@@ -54,7 +54,7 @@
     </div>
     <div class="row tabelaBonus">
         <div class="col-sm-6">
-            <p class="MensagemBonus"><img src="~/images/Icons/icon-moeda.png" class="iconsItemBonusMoeda" /> Total Moedas: <strong>@Model.MoedasOuroTotal</strong> <strong>@Model.ResultadoJogo</strong><strong>@Model.GameID</strong></p>
+            <p class="MensagemBonus"><img src="~/images/Icons/icon-moeda.png" class="iconsItemBonusMoeda" /> Total Moedas: <strong>@Model.MoedasOuroTotal</strong> <strong>@Model.ResultadoJogo</strong></p>
         </div>
         <div class="col-sm-6 columncenter text-center">
             <a asp-controller="Home" asp-action="HiScores" class="btn btn-info">HiScores</a>
